# PacMan

./: .clang-format  CMakeLists.txt
data/: default_level.txt
res/src/: make_png.sh
src/: Def.h  Directions.h  Game.cpp  Game.h  Sprite.cpp  Sprite.h  SurfacesManager.cpp  SurfacesManager.h  Timer.cpp  Timer.h  XVector.h  main.cpp
